fix cluster label overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -366,13 +366,15 @@ ul > li {
     width: 100%;
     height: 100%;
     position: absolute;
+    overflow: hidden;
 }
 .clusterLabel {
     position: absolute;
     transform: translate(-50%, -50%);
     font-family: sans-serif;
     font-variant: small-caps;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 1rem;
-    text-shadow: 2px 2px 1px white, -2px -2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
+    background-color: var(--transparent-white);
+    opacity: 0.8;
 }
